<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_register_my_sql"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/register"
    tools:context="app.ahiha.pro.ahihaapplication.Auth.RegisterMySqlActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:orientation="vertical" >


            <android.support.design.widget.TextInputLayout
                android:id="@+id/usernname_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:layout_marginTop="16dp"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/MyTextInputLayoutErrorText">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/username_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:gravity="fill_horizontal"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/second_edit_text"
                    tools:ignore="Deprecated" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginTop="16dp"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/MyTextInputLayoutErrorText">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:gravity="fill_horizontal"
                    android:inputType="textWebPassword"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/second_edit_text"
                    tools:ignore="Deprecated" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:layout_marginTop="16dp"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/MyTextInputLayoutErrorText"
                tools:ignore="ExtraText">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:gravity="fill_horizontal"
                    android:inputType="textWebEmailAddress"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/second_edit_text"
                    tools:ignore="Deprecated"
                    android:layout_weight="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/phone_layout_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/phone"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/MyTextInputLayoutErrorText">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/phone_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:gravity="fill_horizontal"
                    android:inputType="phone"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/second_edit_text"
                    tools:ignore="Deprecated" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/city_input_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/city"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/MyTextInputLayoutErrorText">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/city_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:gravity="fill_horizontal"
                    android:inputType="textAutoComplete"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/second_edit_text"
                    tools:ignore="Deprecated" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/region_input_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/region"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/MyTextInputLayoutErrorText">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/region_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:gravity="fill_horizontal"
                    android:inputType="textAutoComplete"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/second_edit_text"
                    tools:ignore="Deprecated" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/date_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dateofbirth"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/MyTextInputLayoutErrorText">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/date_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:gravity="fill_horizontal"
                    android:inputType="date"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/second_edit_text"
                    tools:ignore="Deprecated" />
            </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="horizontal" android:weightSum="1">

            <TextView
                android:layout_height="wrap_content"
                android:text=":  الجنس  "
                android:textSize="22dp"
                android:textStyle="bold"
                android:gravity="left"
                tools:ignore="HardcodedText,InefficientWeight,RtlHardcoded,RtlSymmetry,SpUsage"
                android:paddingLeft="16dp"
                android:layout_width="100dp"
                 />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="16dp"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded,RtlSymmetry">
                <RadioButton android:id="@+id/radio_m"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ذكر"
                    android:checked="true"
                    android:paddingRight="16dp"
                    android:onClick="checkradiobtn"
                    tools:ignore="HardcodedText" />
                <RadioButton android:id="@+id/radio_f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="checkradiobtn"
                    android:paddingRight="6dp"
                    android:text="انثى"
                    tools:ignore="HardcodedText" />
           </RadioGroup>

        </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                        android:layout_height="match_parent"
                        android:text="@string/bloodspiner"
                        android:gravity="center_horizontal"
                        android:textSize="22dp"
                        android:paddingRight="8dp"


                        android:textStyle="bold"
                        tools:ignore="RtlHardcoded,RtlSymmetry,SpUsage"
                        android:layout_width="90dp"
                    android:layout_weight="1.01" />

                <Spinner
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:id="@+id/spinner"
                    android:layout_marginTop="2dp"
                    android:elevation="6dp"
                    tools:ignore="RtlHardcoded,RtlSymmetry,UnusedAttribute"
                    android:layout_weight="1" />
            </LinearLayout>

            <Button
                android:text="تسجيل"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:onClick="RegisterClick"
                android:textColor="#ffffff"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="12dp"
                android:id="@+id/button7"
                android:layout_gravity="center_vertical"
                android:background="@drawable/loginbtnstyle"
                tools:ignore="HardcodedText,SpUsage,UnusedAttribute"
                android:elevation="5dp" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
