<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_update__donor_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.ahiha.pro.ahihaapplication.MainActivityRes.Update_DonorProfile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:orientation="vertical"
            tools:ignore="UselessLeaf" >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/name_updatelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:layout_marginTop="16dp"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/MyTextInputLayoutErrorText">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name_updateedittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:gravity="fill_horizontal"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    tools:ignore="Deprecated" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/phone_updatelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:layout_marginTop="16dp"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/MyTextInputLayoutErrorText">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/phone_updateedittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:gravity="fill_horizontal"
                    android:inputType="phone"
                    android:imeOptions="actionNext"
                    tools:ignore="Deprecated" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/city_updatelayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/city"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/MyTextInputLayoutErrorText">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/city_updateedittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:gravity="fill_horizontal"
                    android:inputType="textAutoComplete"
                    android:imeOptions="actionNext"
                    tools:ignore="Deprecated" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/region_updatelayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/region"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/MyTextInputLayoutErrorText">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/region_updateedittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:gravity="fill_horizontal"
                    android:inputType="textAutoComplete"
                    android:imeOptions="actionNext"
                    tools:ignore="Deprecated" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/date_updtelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dateofbirth"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/MyTextInputLayoutErrorText">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/date_updateedittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:gravity="fill_horizontal"
                    android:inputType="date"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/second_edit_text"
                    tools:ignore="Deprecated" />
            </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:layout_height="wrap_content"
                android:text=":الجنس"
                android:textSize="16dp"
                android:textStyle="bold"
                tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry,SpUsage"
                android:paddingTop="6dp"
                android:layout_width="50dp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="6dp"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded,RtlSymmetry">
                <RadioButton android:id="@+id/radio_u_m"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ذكر"
                    android:checked="true"
                    android:onClick="checkradiobtn"
                    tools:ignore="HardcodedText" />
                <RadioButton android:id="@+id/radio_u_f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="checkradiobtn"
                    android:paddingRight="4dp"
                    android:text="انثى"
                    tools:ignore="HardcodedText" />
            </RadioGroup>

            <TextView
                android:layout_height="match_parent"
                android:text="@string/bloodspiner"
                android:gravity="center_horizontal"
                android:textSize="15dp"
                android:paddingRight="2dp"
                android:paddingTop="4dp"
                android:layout_marginTop="2dp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry,SpUsage"
                android:layout_width="90dp" />

            <Spinner
                android:layout_width="55dp"
                android:layout_height="match_parent"
                android:id="@+id/spinner_update"
                android:layout_marginTop="2dp"
                android:elevation="6dp"
                tools:ignore="RtlHardcoded,RtlSymmetry,UnusedAttribute" />
</LinearLayout>
            <Button
                android:text="تعديل"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button10"
                android:background="@drawable/loginbtnstyle"
                android:layout_marginTop="10dp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="28dp"
                android:onClick="Submit_Update"
                android:layout_marginBottom="3dp"
                tools:ignore="HardcodedText,SpUsage" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
