<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_login_layout"
    android:paddingRight="18dp"
    android:paddingLeft="18dp"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:background="@drawable/splashcreen"
    android:orientation="vertical"
    tools:context="app.ahiha.pro.ahihaapplication.Auth.LoginActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:layout_marginTop="50dp"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/MyTextInputLayoutErrorText">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:gravity="fill_horizontal"
            android:inputType="textWebEmailAddress"
            android:imeOptions="actionNext"
            tools:ignore="Deprecated" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/MyTextInputLayoutErrorText">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:gravity="fill_horizontal"
            android:inputType="textWebPassword"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/second_edit_text"
            tools:ignore="Deprecated" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="تسجيل الدخول"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginTop="28dp"
        android:textColor="#ffffff"
        android:id="@+id/button4"
        android:layout_gravity="center_vertical"
        android:background="@drawable/loginbtnstyle"
        tools:ignore="HardcodedText,SpUsage,UnusedAttribute"
        android:elevation="5dp" />

    <Button
        android:text="انشاء حساب"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/button5"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_gravity="center_vertical"
        android:textColor="#ffffff"
        android:background="@drawable/loginbtnstyle"
        tools:ignore="HardcodedText,SpUsage,UnusedAttribute"
        android:elevation="5dp" />

    <TextView
        android:text="@string/resetpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColorLink="@color/colorPrimary"
        android:layout_marginTop="14dp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/button2"
        tools:ignore="HardcodedText,SpUsage" />

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:visibility="gone"
        android:id="@+id/progressBar" />

</LinearLayout>

